--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
  	"parse/php-sdk" : "1.1.*",
-	"graham-campbell/parse": "^2.0"
+	"graham-campbell/parse": "^2.0",
+	"laravelcollective/html": "~5.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
